force-app/main/default/objects/Fleet_View__mdt/Fleet_View__mdt.object-meta.xml
<CustomObject>
    <label>Fleet View</label>
    <pluralLabel>Fleet Views</pluralLabel>
</CustomObject>