force-app/main/default/objects/Fleet_View__mdt/fields/Filter_JSON__c.field-meta.xml
<CustomField>
    <fullName>Filter_JSON__c</fullName>
    <label>Filter JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>