force-app/main/default/objects/Fleet_View__mdt/fields/Sort_Direction__c.field-meta.xml
<CustomField>
    <fullName>Sort_Direction__c</fullName>
    <label>Sort Direction</label>
    <type>Text</type>
    <length>10</length>
</CustomField>