force-app/main/default/objects/Fleet_View__mdt/fields/Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>Sort_Field__c</fullName>
    <label>Sort Field</label>
    <type>Text</type>
    <length>80</length>
</CustomField>