force-app/main/default/objects/Fleet_View__mdt/fields/View_Key__c.field-meta.xml
<CustomField>
    <fullName>View_Key__c</fullName>
    <label>View Key</label>
    <type>Text</type>
    <length>80</length>
</CustomField>